[gd_scene load_steps=18 format=2]

[ext_resource path="res://Visuals/Fonts&Themes/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://Visuals/UIsprites/PointerRect.png" type="Texture" id=2]
[ext_resource path="res://Visuals/UIsprites/GrayRect.png" type="Texture" id=3]
[ext_resource path="res://Generator.gd" type="Script" id=4]

[sub_resource type="ImageTexture" id=1]
flags = 17
flags = 17

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.117647, 0.117647, 0.117647, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.117647, 0.117647, 0.117647, 1 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 1.0
bg_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 1.0
bg_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 1.0
bg_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 5.0
bg_color = Color( 0.470588, 0.470588, 0.470588, 1 )

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 5.0
bg_color = Color( 0.470588, 0.470588, 0.470588, 1 )

[sub_resource type="StyleBoxLine" id=11]
color = Color( 0.196078, 0.196078, 0.196078, 1 )
grow_begin = 0.0
grow_end = 0.0
thickness = 7

[sub_resource type="StyleBoxLine" id=12]
color = Color( 0.352941, 0.352941, 0.352941, 1 )
grow_begin = 0.0
grow_end = 0.0
thickness = 7

[sub_resource type="StyleBoxLine" id=13]
color = Color( 0.352941, 0.352941, 0.352941, 1 )
grow_begin = 0.0
grow_end = 0.0
thickness = 7

[node name="Scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1200.0
margin_bottom = -600.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapTexture" type="TextureRect" parent="."]
margin_left = 225.0
margin_top = 105.0
margin_right = 1185.0
margin_bottom = 585.0
texture = SubResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenerateButton" type="Button" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 115.0
margin_bottom = 45.0
rect_scale = Vector2( 2.5, 2.5 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Generate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeedLabel" type="LineEdit" parent="."]
margin_left = 865.0
margin_top = 25.0
margin_right = 1175.0
margin_bottom = 50.0
custom_styles/read_only = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
max_length = 25
editable = false
secret_character = "_"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeedEdit" type="LineEdit" parent="."]
margin_left = 860.0
margin_top = 60.0
margin_right = 1180.0
margin_bottom = 92.0
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
max_length = 25
secret_character = "_"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BackGround" type="TextureRect" parent="SeedEdit"]
show_behind_parent = true
margin_left = -95.0
margin_top = -6.0
margin_right = 325.0
margin_bottom = 37.5
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SeedEdit"]
margin_left = -85.0
margin_right = -31.0
margin_bottom = 22.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Seed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResolutionSlider" type="HSlider" parent="."]
margin_left = 20.0
margin_top = 130.0
margin_right = 200.0
margin_bottom = 145.0
custom_icons/tick = ExtResource( 2 )
custom_icons/grabber_disabled = ExtResource( 2 )
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/slider = SubResource( 11 )
custom_styles/grabber_area_highlight = SubResource( 12 )
custom_styles/grabber_area = SubResource( 13 )
min_value = 48.0
max_value = 960.0
value = 960.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BackGround" type="TextureRect" parent="ResolutionSlider"]
show_behind_parent = true
margin_left = -10.0
margin_top = -25.0
margin_right = 190.0
margin_bottom = 20.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ResolutionSlider"]
margin_top = -22.5
margin_right = 171.0
margin_bottom = 10.5
text = "Resolution"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScaleSlider" type="HSlider" parent="."]
margin_left = 20.0
margin_top = 175.0
margin_right = 200.0
margin_bottom = 190.0
custom_icons/tick = ExtResource( 2 )
custom_icons/grabber_disabled = ExtResource( 2 )
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/slider = SubResource( 11 )
custom_styles/grabber_area_highlight = SubResource( 12 )
custom_styles/grabber_area = SubResource( 13 )
min_value = 10.0
max_value = 1000.0
value = 200.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BackGround" type="TextureRect" parent="ScaleSlider"]
show_behind_parent = true
margin_left = -10.0
margin_top = -25.0
margin_right = 190.0
margin_bottom = 20.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ScaleSlider"]
margin_top = -22.5
margin_right = 89.0
margin_bottom = 10.5
text = "Scale"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OctavesSlider" type="HSlider" parent="."]
margin_left = 20.0
margin_top = 227.5
margin_right = 200.0
margin_bottom = 242.5
custom_icons/tick = ExtResource( 2 )
custom_icons/grabber_disabled = ExtResource( 2 )
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/slider = SubResource( 11 )
custom_styles/grabber_area_highlight = SubResource( 12 )
custom_styles/grabber_area = SubResource( 13 )
min_value = 1.0
max_value = 9.0
value = 9.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BackGround" type="TextureRect" parent="OctavesSlider"]
show_behind_parent = true
margin_left = -10.0
margin_top = -25.0
margin_right = 190.0
margin_bottom = 20.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OctavesSlider"]
margin_top = -22.5
margin_right = 92.0
margin_bottom = -0.5
text = "Octaves"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PersistenceSlider" type="HSlider" parent="."]
margin_left = 20.0
margin_top = 272.5
margin_right = 200.0
margin_bottom = 287.5
custom_icons/tick = ExtResource( 2 )
custom_icons/grabber_disabled = ExtResource( 2 )
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/slider = SubResource( 11 )
custom_styles/grabber_area_highlight = SubResource( 12 )
custom_styles/grabber_area = SubResource( 13 )
max_value = 1.0
step = 0.001
value = 0.6
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BackGround" type="TextureRect" parent="PersistenceSlider"]
show_behind_parent = true
margin_left = -10.0
margin_top = -25.0
margin_right = 190.0
margin_bottom = 20.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PersistenceSlider"]
margin_top = -22.5
margin_right = 140.0
margin_bottom = -0.5
text = "Persistence"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LacunaritySlider" type="HSlider" parent="."]
margin_left = 20.0
margin_top = 317.5
margin_right = 200.0
margin_bottom = 332.5
custom_icons/tick = ExtResource( 2 )
custom_icons/grabber_disabled = ExtResource( 2 )
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/slider = SubResource( 11 )
custom_styles/grabber_area_highlight = SubResource( 12 )
custom_styles/grabber_area = SubResource( 13 )
min_value = 0.1
max_value = 4.0
step = 0.01
value = 1.6
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BackGround" type="TextureRect" parent="LacunaritySlider"]
show_behind_parent = true
margin_left = -10.0
margin_top = -25.0
margin_right = 190.0
margin_bottom = 20.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LacunaritySlider"]
margin_top = -22.5
margin_right = 126.0
margin_bottom = -0.5
text = "Lacunarity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OceanLevelSlider" type="HSlider" parent="."]
margin_left = 20.0
margin_top = 370.0
margin_right = 200.0
margin_bottom = 385.0
custom_icons/tick = ExtResource( 2 )
custom_icons/grabber_disabled = ExtResource( 2 )
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/slider = SubResource( 11 )
custom_styles/grabber_area_highlight = SubResource( 12 )
custom_styles/grabber_area = SubResource( 13 )
min_value = -0.5
max_value = 0.7
step = 0.001
value = 0.05
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BackGround" type="TextureRect" parent="OceanLevelSlider"]
show_behind_parent = true
margin_left = -10.0
margin_top = -25.0
margin_right = 190.0
margin_bottom = 20.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OceanLevelSlider"]
margin_top = -22.5
margin_right = 138.0
margin_bottom = -0.5
text = "Ocean Level"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="GenerateButton" to="." method="Generate"]
